--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "zustand": "^4.4.1"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.13",
     "@tanstack/eslint-plugin-query": "^4.32.5",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
