--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "encoding": "^0.1.13",
+    "formik": "^2.4.4",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-syntax-highlighter": "^15.5.0",
+    "resend": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "yup": "^1.2.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
