--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "axios": "^1.4.0",
     "encoding": "^0.1.13",
     "formik": "^2.4.4",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
+    "next": "^13.5.4",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
